alterada nomenclatura news para post
