# src/routes/swagger.json
@@ -217,7 +217,7 @@
           }
         }
       },
-      "/news/create": {
+      "/post/create": {
         "post": {
           "summary": "Create a new post",
           "description": "Route responsible for creating a new Post",
@@ -265,7 +265,7 @@
           }
         }
       },
-      "/news": {
+      "/post": {
         "get": {
           "summary": "Search all posts",
           "description": "Route responsible for fetching all posts",
@@ -302,7 +302,7 @@
           }
         }
       },
-      "/news/top": {
+      "/post/top": {
         "get": {
           "summary": "Search top post",
           "description": "Route responsible for fetching top post",
@@ -325,7 +325,7 @@
           }
         }
       },
-      "/news/search": {
+      "/post/search": {
         "get": {
           "summary": "Search posts by title",
           "description": "Route responsible for fetching the posts that match the title sent via query params",
@@ -358,7 +358,7 @@
           }
         }
       },
-      "/news/byIdPost/{id}": {
+      "/post/byIdPost/{id}": {
         "patch": {
           "summary": "Search post by id",
           "description": "Route responsible for fetching post by id",
@@ -394,7 +394,7 @@
           }
         }
       },
-      "/news/byUserId": {
+      "/post/byUserId": {
         "get": {
           "summary": "Search posts by use id",
           "description": "Route responsible for fetching posts by use id",
@@ -422,7 +422,7 @@
           }
         }
       },
-      "/news/upadate/{id}": {
+      "/post/upadate/{id}": {
         "patch": {
           "summary": "Update a post",
           "description": "Route responsible for updating a Post",
@@ -476,7 +476,7 @@
           }
         }
       },
-      "/news/delete/{id}": {
+      "/post/delete/{id}": {
         "delete": {
           "summary": "Delete a post",
           "description": "Route responsible for deleting a Post",
@@ -504,7 +504,7 @@
           }
         }
       },
-      "/news/{id}/like": {
+      "/post/{id}/like": {
         "patch": {
           "summary": "Like a post",
           "description": "Route responsible for liking a post",
@@ -532,7 +532,7 @@
           }
         }
       },
-      "/news/{id}/comment": {
+      "/post/{id}/comment": {
         "patch": {
           "summary": "Comment on a post",
           "description": "Route responsible for commenting on a post",
